env set , Prepare for deployment